--- a/Quill.ipynb
+++ b/Quill.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ef3e54b9",
+   "metadata": {},
+   "source": [
+    "# Methods on Datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c44d3a34",
+   "metadata": {},
+   "source": [
+    "### Numpy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "16815c94",
    "metadata": {},
    "outputs": [
@@ -12,7 +28,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,8 +102,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9bddb228",
+   "metadata": {},
+   "source": [
+    "### Pandas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0ad0b45b",
    "metadata": {},
    "outputs": [
@@ -229,7 +253,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +660,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "f12a0930",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -659,6 +685,35 @@
     "    return fare - 10\n",
     "substracted_fare = titanic_data.Fare.apply(substractFare)\n",
     "substracted_fare.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "46835fd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     5.2500\n",
+       "1    69.2833\n",
+       "2     5.9250\n",
+       "3    51.1000\n",
+       "4     6.0500\n",
+       "Name: Fare, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def substractFares(fare):\n",
+    "    return fare - 2\n",
+    "substracted_fares = titanic_data.Fare.apply(substractFares)\n",
+    "substracted_fares.head()"
    ]
   }
  ],
