new chapter started

--- a/Quill.ipynb
+++ b/Quill.ipynb
@@ -715,6 +715,22 @@
     "substracted_fares = titanic_data.Fare.apply(substractFares)\n",
     "substracted_fares.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89ed1045",
+   "metadata": {},
+   "source": [
+    "## Data Visualization via Matplotlib, Seaborn, and Pandas Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eefe6b3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
