--- a/Quill.ipynb
+++ b/Quill.ipynb
@@ -725,12 +725,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eefe6b3e",
+   "cell_type": "raw",
+   "id": "6066dc50",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Preparational part for EQ test tasks "
+   ]
   }
  ],
  "metadata": {
